apps/kitchenowl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kitchenowl
  labels:
    name: kitchenowl
